--- a/snip-bits.html
+++ b/snip-bits.html
@@ -27,7 +27,7 @@ title: Fin-bits
 {% for snip-bits in site.snip-bits %}
   <h2>
     <a href="{{ snip-bits.url }}">
-      {{ snip-bits.name }} - {{ snip-bits.position }}
+      {{ snip-bits.name }} - {{ snip-bits.author }}
     </a>
   </h2>
   <p>{{ snip-bit.content | markdownify }}</p>
