--- a/snip-bits.html
+++ b/snip-bits.html
@@ -4,7 +4,8 @@ title: Fin-bits
 ---
 <p> 
 <span style="font-size: medium;font-weight: bolder;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
-    This section Provides general articles and information about Financial Regulatories and general terminology
+   **under development**
+  This section Provides general articles and information about Financial Regulatories and general terminology
 </span>
 </p>
 <style>
