--- a/snip-bits.html
+++ b/snip-bits.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Fin-bits
-permlink: /fortheloveofnifty/snip-bits/
+permlink: "/fortheloveofnifty/snip-bits/"
 ---
 <p> 
 <span style="font-size: medium;font-weight: bolder;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
